added animation library

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -26,7 +26,7 @@ layout: default
 
 	{% for image in site.static_files %}
 	{% if image.path contains location %}
-		<img src="{{ site.baseurl }}{{ image.path }}" alt="project image" />
+		<img src="{{ site.baseurl }}{{ image.path }}" alt="project image" data-aos="fade"/>
 	{% endif %}
 	{% endfor %}
 	
