--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,10 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <link href="{{ site.baseurl }}/css/main.css" media="screen, projection" rel="stylesheet" type="text/css" />
+    <!-- AOS Animation CSS Library -->
+    <link rel="stylesheet" href="{{ site.baseurl }}/node_modules/aos/dist/aos.css" />
 
+    <link href="{{ site.baseurl }}/css/main.css" media="screen, projection" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
@@ -27,6 +29,16 @@
             
             {% include footer.html %}
 
+            <!-- AOS Animation JS Library and Global Settings -->
+            <script src="{{site.baseurl }}/node_modules/aos/dist/aos.js"></script>
+            <script>
+                AOS.init({
+                    offset: 40,
+                    once: true,
+                    disable: window.innerWidth < 1024,
+                });
+            </script>
+            
             <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
             <script>
                 (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
