--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -96,7 +96,7 @@
 
  /* ---------------------------------------------------------------------
  Project Cards (Medium Breakpoint)
- ------------------------------------------------------------------------ 
+ ------------------------------------------------------------------------ */
 
  @media (min-width: $medium-break) {
 
