--- a/sass/_background.scss
+++ b/sass/_background.scss
@@ -20,12 +20,16 @@
  	}
  }
 
+ .about-background {
+ 	@include background-image(linear-gradient(165deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 56%, $background-color 56%, $background-color 100%));	
+ }
+
  .avant-background {
  	@include background-image(linear-gradient(165deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 45%, $background-color 45%, $background-color 100%));	
  }
 
  .jiang_china_design-background {
- 	@include background-image(linear-gradient(165deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 34%, $background-color 34%, $background-color 100%));	
+ 	@include background-image(linear-gradient(165deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 12.5%, $background-color 12.5%, $background-color 100%));	
  }
 
  .listening_devices-background {
@@ -37,7 +41,7 @@
  }
 
  .planet_finance_china-background {
- 	@include background-image(linear-gradient(165deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 46%, $background-color 46%, $background-color 100%));	
+ 	@include background-image(linear-gradient(165deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 17%, $background-color 17%, $background-color 100%));	
  }
 
  .smart_air-background {
@@ -45,7 +49,7 @@
  }
 
  @media (max-width: $large-break) {
- 	.avant-background, .jiang_china_design-background, .listening_devices-background, .morningstar-background, .planet_finance_china-background, .smart_air-background {
+ 	.about-background, .avant-background, .jiang_china_design-background, .listening_devices-background, .morningstar-background, .planet_finance_china-background, .smart_air-background {
  		display: none;
  	}
  }
