--- a/sass/_project.scss
+++ b/sass/_project.scss
@@ -69,8 +69,24 @@
  @media (min-width: $large-break) {
  	.project_image-container {
  		@include span(7.5);
+
+ 		img {
+ 			@include box-shadow(0 15px 15px rgba(0, 0, 0, .15));
+
+ 			&:hover {
+				@include box-shadow(0 20px 20px rgba(0, 0, 0, .15)); 				
+ 			}
+ 		}
+
+ 		 /*AOS Animation Fade Override*/
+		img[data-aos="fade"] {
+		@include transition-property(all);
+		}
+
  	}
  }
+
+
 
 
  /* ---------------------------------------------------------------------
