new theme styling

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,12 +2,11 @@
 	<div class="buffer">
 		<div class="footer-container">
 
-			<div {% if page.title == 'home' %} class="footer-content" {% else %} class="footer-content footer-border" {% endif %}>
+			<div class="footer-content footer-border">
 				<div class="footer-wrapper">
 					<p class="footer-item">Chris Mlynarski©</p>
 
-					<div class="icons-container">
-						<!-- <p class="email footer-item">cmlynars@gmail.com</p> -->
+					<div class="icons-container">				
 
 						{% include social_icons.html %}
 
