--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,12 +16,8 @@
     <link href="{{ site.baseurl }}/css/main.css" media="screen, projection" rel="stylesheet" type="text/css" />
 </head>
 <body>
-
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-            <![endif]-->
-            
-            <div class="background {{ page.title }}-background"></div>
+            <!-- Removing background for minimal theme -->
+            <!-- <div class="background {{ page.title }}-background"></div> -->
 
             {% include nav.html %}
 
