--- a/sass/_background.scss
+++ b/sass/_background.scss
@@ -1,8 +1,8 @@
 /* ---------------------------------------------------------------------
- Background
+ Background (Currently not in use for minimal theme)
  ------------------------------------------------------------------------ */
 
- .background {
+/* .background {
  	position: absolute;
  	height: 100%;
  	width: 100%;
@@ -52,4 +52,4 @@
  	.about-background, .avant-background, .jiang_china_design-background, .listening_devices-background, .morningstar-background, .planet_finance_china-background, .smart_air-background {
  		display: none;
  	}
- }
+ }*/
