--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -53,18 +53,7 @@
  	/*Mobile-first Width*/
  	@include span(12);
  	margin-bottom: 24px;	
-
- 	/*General styles*/
- 	@include box-shadow($card-shadow);
- 	/*@include transition-property(box-shadow);
- 	@include transition-duration(.2s);
- 	@include transition-timing-function(ease-in);*/
  	cursor: pointer;
- 	background-color: #fff;
-
- 	&:hover {
- 		@include box-shadow($hover-shadow);
- 	}
  }	
 
 /*AOS Animation Fade-up Override*/
@@ -76,21 +65,25 @@
  	background-repeat: no-repeat;
  	background-position: center;
  	background-size: cover;
- 	height: 200px;
+ 	height: 230px;
  }
 
  .card-content {
- 	padding: 16px 1.5rem 16px 1.5rem;
+ 	padding: 16px 0 16px 0;
 
  	h3 {
- 		margin-bottom: 4px;
+ 		margin-bottom: 2px;
+ 	}
+
+ 	.inline-link {
+ 		margin-top: 10px;
  	}
  }
 
  .card-details {
  	display: flex;
  	justify-content: space-between;
- 	margin-bottom: 15px;
+ 	margin-bottom: 12px;
  	align-items: baseline;
  }
 
@@ -103,6 +96,7 @@
  	.project-card {
  		@include span(6);
  		height: 408px;
+ 		margin-bottom: 48px;
 
  		&:nth-child(1) {
  			@include span(12);
@@ -132,16 +126,16 @@
  @media (min-width: $large-break) {
 
  	.project-card {
- 		@include span(4.25);
- 		margin-bottom: 40px;
+ 		@include span(4.5);
+ 		margin-bottom: 56px;
 
  		&:nth-child(1) {
- 			@include span(7.75);
+ 			@include span(7.5);
  		}
  	}
 
  	.primary-card {
- 		@include span(7.75);
+ 		@include span(7.5);
  	}
  }
 
