--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -120,3 +120,13 @@ a {
  			color: $link-hover;
  		}	
  }
+
+  .arrow {
+ 	stroke: $accent;
+ 	fill: $accent;
+
+ 	@include transition-property(color, fill, transform);
+ 	@include transition-duration(.09s);
+ 	@include transition-timing-function(ease-in);
+ }
+
