--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -33,7 +33,7 @@ layout: default
 		
 	</div>
 	
-	<div class="links-container">
+	<div class="project-links-container">
 	
 		{% assign previous = page.order | minus: 1 %}
 		{% for projects in site.pages %}
