--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -2,52 +2,52 @@
  Susy Grid Settings
  ------------------------------------------------------------------------ */
 
-$susy: (
-	columns: 12,
-	gutters: .6,
-	gutter-position: split,
-	/*debug: (image: show)*/
-	);
+ $susy: (
+ 	columns: 12,
+ 	gutters: .6,
+ 	gutter-position: split,
+ 	/*debug: (image: show)*/
+ 	);
 
-.buffer {
-	@media (max-width: $large-break) {
-	margin-left: 12px !important;
-	margin-right: 12px !important;	
-	}
-}
+ .buffer {
+ 	@media (max-width: $large-break) {
+ 		margin-left: 12px !important;
+ 		margin-right: 12px !important;	
+ 	}
+ }
 
 /* ---------------------------------------------------------------------
  Base Styles
- ----------------------------------------------------f-------------------- */
+ ------------------------------------------------------------------------ */
 
-* {
-	/*border: 1px solid red !important;*/
-	@include box-sizing(border-box);
-}
+ * {
+ 	/*border: 1px solid red !important;*/
+ 	@include box-sizing(border-box);
+ }
 
-html {
-	font-size: 16px;
+ html {
+ 	font-size: 16px;
 
-	/*REM OVERRIDES FOR SPACING*/
-	@media (max-width: $large-break) {
-		font-size: 13px;
-	}
+ 	/*REM OVERRIDES FOR SPACING*/
+ 	@media (max-width: $large-break) {
+ 		font-size: 13px;
+ 	}
 
-	@media (max-width: $medium-break) {
-		font-size: 10px;
-	}
-}
+ 	@media (max-width: $medium-break) {
+ 		font-size: 10px;
+ 	}
+ }
 
-body {
-	font-family: $body-font;
-	position: relative;
-}
+ body {
+ 	font-family: $body-font;
+ 	position: relative;
+ }
 
-h1 {
-	font-family: $body-font;
-	color: $primary;
-	font-size: 38px;
-	line-height: 58px;
+ h1 {
+ 	font-family: $body-font;
+ 	color: $primary;
+ 	font-size: 38px;
+ 	line-height: 58px;
  	font-weight: 300;
  	letter-spacing: 1px;
 
@@ -55,11 +55,11 @@ h1 {
  		font-size: 28px;
  		line-height: 42px;
  	}
-}
+ }
 
-h2 {
-	color: $tertiary;
-	font-size: 26px;
+ h2 {
+ 	color: $tertiary;
+ 	font-size: 26px;
  	line-height: 38px;
  	font-weight: 300;
 
@@ -67,66 +67,120 @@ h2 {
  		font-size: 21px;
  		line-height: 32px;
  	}
-}
-
-h3 {
-	color: $primary;
-	font-family: $headline-font;
-	font-size: 28px;
-	font-weight: 300;
-	letter-spacing: .5px;
-	
-	@media (max-width: $medium-break) {
-	font-size: 24px;	
-	}
-}
-
-h4 {
-	color: $primary;
-	font-size: 16px;
-	font-weight: 400;
-	letter-spacing: .25px;
-}
-
-h5 {
-	color: $tertiary;
-	font-size: 16px;
-	letter-spacing: .25px;
-	font-weight: 300;
-}
-
-p {
-	color: $secondary;
-	font-size: 16px;
-	line-height: 24px;
-	letter-spacing: .5px;
-}
-
-a {
-	text-decoration: none;
-	@include transition-property(color, fill);
-	@include transition-duration(.09s);
-	@include transition-timing-function(ease-in);
-
-	&:visted {
-		color: inherit;
-	}
-}
-
- .inline-link {
- 	color: $accent;
-
- 	&:hover {
- 			color: $link-hover;
- 		}	
  }
 
-  .arrow {
+ h3 {
+ 	color: $primary;
+ 	font-family: $headline-font;
+ 	font-size: 28px;
+ 	font-weight: 300;
+ 	letter-spacing: .5px;
+
+ 	@media (max-width: $medium-break) {
+ 		font-size: 24px;	
+ 	}
+ }
+
+ h4 {
+ 	color: $primary;
+ 	font-size: 16px;
+ 	font-weight: 400;
+ 	letter-spacing: .25px;
+ }
+
+ h5 {
+ 	color: $tertiary;
+ 	font-size: 16px;
+ 	letter-spacing: .25px;
+ 	font-weight: 300;
+ }
+
+ p {
+ 	color: $secondary;
+ 	font-size: 16px;
+ 	line-height: 24px;
+ 	letter-spacing: .5px;
+ }
+
+ a {
+ 	text-decoration: none;
+ 	@include transition-property(color, fill);
+ 	@include transition-duration(.09s);
+ 	@include transition-timing-function(ease-in);
+
+ 	&:visted {
+ 		color: inherit;
+ 	}
+ }
+
+/* ---------------------------------------------------------------------
+ Global Link Styles
+ ------------------------------------------------------------------------ */
+
+ .single-link-container {
+ 	display: flex;
+
+ 	&:hover {
+ 		.project-link {
+ 			color: $link-hover;
+ 		}
+
+ 		.arrow {
+ 			stroke: $link-hover;
+ 			fill: $link-hover;
+ 		}
+
+ 		.right-arrow {
+ 			transform: translateX(4px);
+ 		}
+
+ 		.left-arrow {
+ 			transform: translateX(-4px);
+ 		}
+ 	}
+
+ 	svg {
+ 		margin-top: 5px;
+ 		@include transition-property(all);
+ 		@include transition-duration(120ms);
+ 		@include transition-timing-function(ease-in);
+ 	}
+ }
+
+ .project-link {
+ 	font-size: 16px;
+ 	color: $accent;
+
+ 	@include transition-property(color, fill);
+ 	@include transition-duration(.09s);
+ 	@include transition-timing-function(ease-in);
+
+ 	&:nth-child(1) { 
+ 		margin-right: 8px;
+ 	}
+
+ 	&:nth-child(2) { 
+ 		margin-left: 8px;
+ 	}
+ }
+
+ .arrow {
  	stroke: $accent;
  	fill: $accent;
 
  	@include transition-property(color, fill, transform);
  	@include transition-duration(.09s);
  	@include transition-timing-function(ease-in);
+ }
+
+ /*Links within blocks of text*/
+
+ .inline-link {
+ 	color: $accent;
+ 	display: inline-block;
+
+ 	&:hover {
+ 		color: $link-hover;
+ 	}	
  }
 
