--- a/sass/_project.scss
+++ b/sass/_project.scss
@@ -66,10 +66,10 @@
  	.project_image-container {
  		@include span(7.5);
 
- 		 /*AOS Animation Fade Override*/
-		img[data-aos="fade"] {
-		@include transition-property(all);
-		}
+ 		/*AOS Animation Fade Override*/
+ 		img[data-aos="fade"] {
+ 			@include transition-property(all);
+ 		}
 
  	}
  }
@@ -86,7 +86,7 @@
  	margin-bottom: 24px;
  } 	
 
-.project-title {
+ .project-title {
  	margin-bottom: 2rem;
  }
 
@@ -119,61 +119,26 @@
  Links Container
  ------------------------------------------------------------------------ */
 
- .links-container {
+ .project-links-container {
  	@include span(4 last);
  	display: flex;
  	justify-content: space-between;
  	align-items: center;
+
+ 	.single-link-container {
+ 		@media (max-width: $large-break) {
+ 			margin: 0 40px;
+ 		}
+ 	}
  }
 
  /*Widen at Small Breakpoint*/
  @media (max-width: $large-break) {
- 	.links-container {
+ 	.project-links-container {
  		@include span(12);
  		margin-top: 32px;
  		justify-content: center;
  	}
  }
 
- .single-link-container {
- 	display: flex;
-
- 	&:hover {
- 		.project-link {
- 			color: $link-hover;
- 		}
-
- 		.arrow {
- 			stroke: $link-hover;
- 			fill: $link-hover;
- 		}
- 	}
-
- 	@media (max-width: $large-break) {
-	margin: 0 40px;
- 	}
-
- 	svg {
- 		margin-top: 4px;
- 	}
- }
-
- .project-link {
- 	font-size: 16px;
- 	color: $accent;
-
- 	@include transition-property(color, fill);
- 	@include transition-duration(.09s);
- 	@include transition-timing-function(ease-in);
-
- 	&:nth-child(1) { 
- 		margin-right: 8px;
- 	}
-
- 	&:nth-child(2) { 
- 		margin-left: 8px;
- 	}
- }
-
-
-
+ 
